# emiv

src/: CMakeLists.txt  filter.cpp  generateHoughTestImages.cpp  houghTransform.cpp  testFeatures.cpp  testGraphics2D.cpp  testLines.cpp  testSegmentation.cpp  testStructureTensor.cpp
src/Graphics2D/: BackgroundImage.cpp  BackgroundImage.hh  CMakeLists.txt  Color.hh  ColorConversion.cpp  ColorConversion.hh  Coordinate.cpp  Coordinate.hh  Filter.cpp  Filter.hh  Histogram.cpp  Histogram.hh  HoughTransform.cpp  HoughTransform.hh  Image.cpp  Image.hh  Painter.cpp  Painter.hh  Painter.hh~  PrimitiveBase.cpp  PrimitiveBase.hh  PrimitiveBox.cpp  PrimitiveBox.hh  PrimitiveLine.cpp  PrimitiveLine.hh  PrimitivePoint.cpp  PrimitivePoint.hh  PrimitivePolygon.cpp  PrimitivePolygon.hh  PrimitiveStar.cpp  PrimitiveStar.hh  Segmentation.cpp  Segmentation.hh  StructureTensor.cpp  StructureTensor.hh
src/Graphics2DBase/: CMakeLists.txt  Canvas2D.cpp  Canvas2Dglut.cpp  Canvas2Dgtk.cpp  Color.cpp  Color.hh  Coordinate.cpp  Coordinate.hh  FloatImage.cpp  FloatImage.hh  ImageBase.cpp  ImageBase.hh  PrimitiveBase.cpp  PrimitiveBase.hh
